--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"],
+      "@/assets/*": ["./assets/*"],
+      "@/app/*": ["./app/*"]
     }
   },
   "include": [
